# maudio

./: CMakeLists.txt  imgui.ini  out.txt
app/: CMakeLists.txt  audio.cpp  audio.h  main.cpp  zepeditor.h
cmake/: Doxyfile.in  all.cmake  config_app.h.cmake  maudio-config.cmake.in  msvc.cmake  pc.cmake
include/: maudio_all.h
include/maudio/: maudio.h  maudio_utils.h  maudio_value.h  mosc.h  msamples.h  node_adsr.h  node_audiobase.h  node_bitcrush.h  node_chorus.h  node_file_output.h  node_mixer.h  node_noise.h  node_oscillator.h  node_output.h  wavetable.h
include/maudio/scheme/: scheme.h
m3rdparty/oscpack/: CMakeLists.txt
m3rdparty/oscpack/src/ip/: IpEndpointName.cpp
m3rdparty/oscpack/src/ip/win32/: NetworkingUtils.cpp  UdpSocket.cpp
m3rdparty/oscpack/src/osc/: OscOutboundPacketStream.cpp  OscPrintReceivedElements.cpp  OscReceivedElements.cpp  OscTypes.cpp
old/wavetable/include/wavetable/: wave_table.h  wave_table_utils.h
old/wavetable/src/: wave_table_utils.cpp
src/: CMakeLists.txt  maudio.cpp  maudio.test.cpp  maudio_utils.cpp  mosc.cpp  msamples.cpp  node_adsr.cpp  node_audiobase.cpp  node_bitcrush.cpp  node_chorus.cpp  node_file_output.cpp  node_mixer.cpp  node_noise.cpp  node_oscillator.cpp  wavetable.cpp
src/scheme/: scheme.cpp
tests/: CMakeLists.txt
